--- a/style/style.css
+++ b/style/style.css
@@ -21,23 +21,26 @@ nav .btn{
     font-size:17px;
 }
 .intro{
-    height: 720px;
+    height: 680px;
     max-width: 1700px;
    background-image: url("../assets/Hero-bg.png");
    text-align: center;
-  
    justify-content: center;
 }
-.intro .intro-2{
-    width: 1000px;
+.intro{
+    width: 100%;
     margin: 0px auto;
+}
+.intro-2{
+   width: 75%;
+   margin: 0px auto;
 }
 .intro .intro-2 img{
     
-    margin-top: 40px;
+    margin-top: 50px;
 }
 .intro .intro-2 h2{
-  font-size: 60px;
+  font-size: 40px;
 }
 .intro .intro-2 p{
     font-size: 20px;
@@ -62,7 +65,7 @@ nav .btn{
 .question1{
      text-align: center;
      justify-content: center;
-     width: 800px;
+     width: 900px;
      margin: 0px auto;
 }
  .question1 h1{
@@ -70,6 +73,8 @@ nav .btn{
  }
  .question1 p{
     font-size: 17px;
+  
+    
  }
  .question2{
     height: 250px;
@@ -284,4 +289,53 @@ font-size: 17px;
    height: 70px;
   display: flex;
   justify-content: space-around;
+}
+@media screen and (max-width:576px){
+   nav{
+      flex-direction: column;
+      height: 170px;
+   }
+   .intro{
+      text-align: start;
+      height: 800px;
+   }
+   .intro .intro-2{
+      width: none;
+      text-align: center;
+   }
+   .question{
+      height: 1260px;
+   }
+   .question1{
+      width: 80%;
+      text-align: center;
+      justify-content:center ;
+   }
+   .question2, .question3, .question4{
+      width: 90%;
+      height: 300px;
+      background-image: none;
+   }
+   .video1{
+      width: 80%;
+   }
+   .react-container ,.img-box{
+      flex-direction: column;
+      text-align: left;
+   }
+   .react-container{
+      width: 70%;
+   }
+   .bannar{
+      width: 100%;
+   }
+   .foot{
+      flex-direction: column;
+      height: 100%;
+      text-align: center;
+   }
+   .foot, ul, li{
+      align-items: center;
+      justify-content: space-evenly;
+   }
 }
